Commented out sections not finished

--- a/rhb.tex
+++ b/rhb.tex
@@ -51,36 +51,36 @@ Sverige delas in i följande distrikt efter sina län:
 \end{tabular}
 %\normalsize
 
-\section{Repeaterlistan}
-
-Repeaterlistan sorteras på geografiskt namn efter var de befinner sig.
-
-\begin{tabular}{lllrrl}
-	\textbf{ID} & \textbf{Kommun} & \textbf{Ort} & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} \\ \hline
-	SK7XY       & Malmö           & Malmö        &           145.625 &         -0.600 & DTMF 0
-\end{tabular}
-
-
-
-
-
-\section{Signaler}
-
-\subsection{Klubbar}
-
-\small
-\begin{longtable}{ll|ll}
-	\textbf{Signal} & \textbf{Klubb}      & \textbf{Signal} & \textbf{Klubb}          \\ \hline
-	SK5JV           & Fagersta radioklubb & SK0SSA          & Sveriges sändaramatörer
-\end{longtable}
-\normalsize
-
-\subsection{Militära stationer (FRO)}
-
-\begin{tabular}{ll}
-	\textbf{Signal} & \textbf{Beskrivning}       \\ \hline
-	SL5AB           & Enköpings ledningsbataljon
-\end{tabular}
+%\section{Repeaterlistan}
+%
+%Repeaterlistan sorteras på geografiskt namn efter var de befinner sig.
+%
+%\begin{tabular}{lllrrl}
+%	\textbf{ID} & \textbf{Kommun} & \textbf{Ort} & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} \\ \hline
+%	SK7XY       & Malmö           & Malmö        &           145.625 &         -0.600 & DTMF 0
+%\end{tabular}
+%
+%
+%
+%
+%
+%\section{Signaler}
+%
+%\subsection{Klubbar}
+%
+%\small
+%\begin{longtable}{ll|ll}
+%	\textbf{Signal} & \textbf{Klubb}      & \textbf{Signal} & \textbf{Klubb}          \\ \hline
+%	SK5JV           & Fagersta radioklubb & SK0SSA          & Sveriges sändaramatörer
+%\end{longtable}
+%\normalsize
+%
+%\subsection{Militära stationer (FRO)}
+%
+%\begin{tabular}{ll}
+%	\textbf{Signal} & \textbf{Beskrivning}       \\ \hline
+%	SL5AB           & Enköpings ledningsbataljon
+%\end{tabular}
 
 \section{Terminologi och trafik}
 
@@ -149,7 +149,6 @@ Repeaterlistan sorteras på geografiskt namn efter var de befinner sig.
 	             & Rätt tid är ...                                                       \\ \hline
 \end{longtable}
 
-\clearpage
 \subsection{Bokstaveringsalfabetet (Svenska)}
 
 \begin{longtable}{cl|cl|cl }
@@ -189,9 +188,7 @@ Repeaterlistan sorteras på geografiskt namn efter var de befinner sig.
 	O &  Oscar   &      &            &
 \end{longtable}
 
-\clearpage
-
-\section{Frekvenslistor}
+\section{Frekvenser}
 
 Dessa frekvenser är avsedda för allmänhet eller för specifika ända\-mål som anges. Det innebär att de kan brukas för de ändamål som anges i PTS för\-fatt\-nings\-sam\-ling\-ar och sammanställning över ej tillståndspliktiga frekvenser. Observera att du är skyldig att själv kontrollera bestämmelserna innan en frekvens brukas.
 
@@ -249,7 +246,7 @@ SRBR är ett ej tillståndspliktigt frekvenssegment som används för yrkesmäss
 
 Rekommendationen är att man skall använda CTCSS eller motsvarande för att undvika störa och bli störd av andra stationer som delar frekvenserna.
 
-\section{CTCSS subtoner}
+\subsection{CTCSS subtoner}
 
 På PMR446 och andra band samt för ett antal repeatrar på 70cm primärt men även ibland 2m och andra band används subtoner för att skapa virtuella grupper och sub-kanaler. De som används är följande toner och frekvenser:
 
@@ -277,65 +274,92 @@ Rekommendationer för repeatrar i olika distrikt och län att använda CTCSS fö
 	Värml. / Örebro &      74.4       &      151.4      &                 &  \\
 	Dalarna         &      85.4       &      151.4      &                 &  \\
 	Distrikt 5      &      82.5       &      91.5       &      103.5      &      203.5      \\
-	Distrikt 6      &      114.8      &      118,8      &   94.8 131.8    &  \\
+	Distrikt 6      &      114.8      &      118,8      &      94.8       &      131.8      \\
 	Distrikt 7      &      79.7       &      156.7      &      210.7      &
 \end{longtable}
+
+
+%\section{Signaler}
+%\subsection{Svenska signaler}
+%Amatörer som fått sitt certifikat tilldelat av Televerket eller senare Post- och Telestyrelsen har signaler i serien SM0AAA-SM7ZZZ för vanliga distrikt. SM8 förekommer också men då är det särskilda stationer utanför rikets gränser. Efter att SSA, ESA och FRO började utdela signaler sker utdelningen i SA0AAA--SA7ZZZ i stället.
+%
+%Klubbar har signaler i serien SK0AA--SK0ZZ. Militära stationer återfinns i serien SL0AA-SL8AA där distrikt 8 kan vara militära skepp.
+%
+%Repeatrar har ofta samma signal som klubben som driver den, eller en enskild amatör med tillägget /R enligt nedan.
+%
+%\begin{tabular}{llllll}
+%/R & Repeater\\
+%/M & Mobil\\
+%/MM & Mobil Maritim (till sjöss)\\
+%/AM & Aeromobil (luftfarkost)\\
+%\end{tabular}
+%
+%\subsection{Norska signaler}
+%
+%\subsection{Danska signaler}
+%
+%\subsection{Finska signaler}
+
+
+
+
+%%%%%%%%%% Bandplaner här roterade 90 för enklast läsning %%%%%%%%%%
 
 \begin{landscape}
 \section{Bandplan 2m 144--146 MHz}
 \begin{tabular}{rrrll}
 	\textbf{Frekvens} &           & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar}                     \\ \hline
-	         144.0000 &  144.1100 &          500 Hz & CW, EME         & \textbf{CW anrop 144.050}                       \\
-	                  &           &                 &                 & MS random 144.100                       \\ \hline
-	         144.1100 &  144.1500 &          500 Hz & CW, MGM         & EME MGM 144.120--144.160                \\
-	                  &           &                 &                 & PSK31 cent. 144.138                     \\ \hline
-	         144.1500 &  144.1800 &         2.7 kHz & CW, SSB, MGM    & EME 144.150--144.160                    \\
-	                  &           &                 &                 & MGM 144.160--144.180 anrop 144.170      \\ \hline
-	         144.1800 &  144.3600 &         2.7 kHz & CW, SSB, MGM    & MS SSB random 144.195--144.205          \\
-	                  &           &                 &                 & \textbf{SSB anrop 144.300}              \\ \hline
-	         144.3600 &  144.3990 &         2.7 kHz & CW, SSB, MGM    & MS MGM random anrop 144.370             \\ \hline
-	         144.4000 &  144.4900 &          500 Hz & Fyr             & Exklusivt segment fyrar, ej QSO         \\ \hline
-	         144.5000 &  144.7940 &          20 kHz & All mode        & SSTV, RTTY, FAX, ATV                    \\
-	                  &           &                 &                 & Linjära transpondrar                    \\ \hline
-	         144.7940 &  144.9625 &          12 kHz & MGM             & APRS 144.800                            \\ \hline
-	         144.9750 & 145.19350 &          12 kHz & FM, DV          & Rpt in 144.975--145.1935                \\
-	                  &           &                 &                 & RV46–-RV63, 12.5 kHz, 600 kHz skift     \\ \hline
-	         145.1940 &  145.2060 &          12 kHz & FM rymd         & 145.200 för kom. m. bem. rymdfark.      \\ \hline
-	         145.2060 &  145.5625 &          12 kHz & FM, DV          & FM 145.2125-–145.5875  V17–V47          \\
-	                  &           &                 &                 & \textbf{FM anrop 145.500}, RTTY 145.300 \\
-	                  &           &                 &                 & FM simpl. INET GW 145.2375, 2875, 3375  \\
-	                  &           &                 &                 & DV anrop 145.375                        \\ \hline
-	         145.5750 &  145.7935 &          12 kHz & FM, DV          & Rpt ut 145.575--145.7875                \\
-	                  &           &                 &                 & RV46–RV63, 12.5 kHz kanalavstånd        \\ \hline
-	          145.794 &   145.806 &          12 kHz & FM Rymd         & 145.800, 145.200 dplx m. bem. rymdfark. \\ \hline
-	          145.806 &   146.000 &          12 kHz & All mode        & Exklusivt satellit                      \\ \hline
+	         144.0000 &  144.1100 &      500 Hz & CW, EME         & \textbf{CW anrop 144.050}               \\
+	                  &           &             &                 & MS random 144.100                       \\ \hline
+	         144.1100 &  144.1500 &      500 Hz & CW, MGM         & EME MGM 144.120--144.160                \\
+	                  &           &             &                 & PSK31 cent. 144.138                     \\ \hline
+	         144.1500 &  144.1800 &     2.7 kHz & CW, SSB, MGM    & EME 144.150--144.160                    \\
+	                  &           &             &                 & MGM 144.160--144.180 anrop 144.170      \\ \hline
+	         144.1800 &  144.3600 &     2.7 kHz & CW, SSB, MGM    & MS SSB random 144.195--144.205          \\
+	                  &           &             &                 & \textbf{SSB anrop 144.300}              \\ \hline
+	         144.3600 &  144.3990 &     2.7 kHz & CW, SSB, MGM    & MS MGM random anrop 144.370             \\ \hline
+	         144.4000 &  144.4900 &      500 Hz & Fyr             & Exklusivt segment fyrar, ej QSO         \\ \hline
+	         144.5000 &  144.7940 &      20 kHz & All mode        & SSTV, RTTY, FAX, ATV                    \\
+	                  &           &             &                 & Linjära transpondrar                    \\ \hline
+	         144.7940 &  144.9625 &      12 kHz & MGM             & APRS 144.800                            \\ \hline
+	         144.9750 & 145.19350 &      12 kHz & FM, DV          & Rpt in 144.975--145.1935                \\
+	                  &           &             &                 & RV46–-RV63, 12.5 kHz, 600 kHz skift     \\ \hline
+	         145.1940 &  145.2060 &      12 kHz & FM rymd         & 145.200 för kom. m. bem. rymdfark.      \\ \hline
+	         145.2060 &  145.5625 &      12 kHz & FM, DV          & FM 145.2125-–145.5875  V17–V47          \\
+	                  &           &             &                 & \textbf{FM anrop 145.500}, RTTY 145.300 \\
+	                  &           &             &                 & FM simpl. INET GW 145.2375, 2875, 3375  \\
+	                  &           &             &                 & DV anrop 145.375                        \\ \hline
+	         145.5750 &  145.7935 &      12 kHz & FM, DV          & Rpt ut 145.575--145.7875                \\
+	                  &           &             &                 & RV46–RV63, 12.5 kHz kanalavstånd        \\ \hline
+	          145.794 &   145.806 &      12 kHz & FM Rymd         & 145.800, 145.200 dplx m. bem. rymdfark. \\ \hline
+	          145.806 &   146.000 &      12 kHz & All mode        & Exklusivt satellit                      \\ \hline
 \end{tabular}
 \end{landscape}
 
 \begin{landscape}
 \section{Bandplan 70cm 432--438 MHz}
 \begin{tabular}{rrrll}
-	\textbf{Frekvens} &               & \textbf{BW} & \textbf{Trafik} & \textbf{Anmärkning}                           \\ \hline
-	         432.0000 &      432.0250 &          500 Hz & CW              & EME exklusivt.                                \\ \hline
-	         432.0250 &      432.1000 &          500 Hz & CW, PSK31       & CW mellan 432.000--085, \textbf{CW anrop 432.050}      \\
-	                  &               &                 &                 & PSK31 432.088                                 \\ \hline
-	         432.1000 &      432.3990 &         2.7 kHz & CW, SSB, MGM    & \textbf{SSB anrop 432.200}                    \\
-	                  &               &                 &                 & Mikrovåg talkback 432.350, FSK441 432.370     \\ \hline
-	         432.4000 &      432.4900 &          500 Hz & Fyr             & Exklusivt segment för fyrar                   \\ \hline
-	         432.5000 &      432.5940 &          12 kHz & All mode        & Linjära transpondrar IN 432.500--600          \\ \hline
-	         432.5000 &      432.5750 &          12 kHz & All mode        & NRAU Digital rep. in 432.500--575 2 MHz skift \\ \hline
-	         432.5940 &      432.9940 &          12 kHz & All mode        & Linjära transpondrar ut 432.600--800          \\ \hline
-	         432.5940 &      432.9940 &          12 kHz & FM              & Rep. in 432.600--975 RU368--398 2 MHz skift   \\ \hline
-	         432.9940 &      433.3810 &          12 kHz & FM              & Rep. in 433.000--375 RU368--398 1.6 MHz skift \\ \hline
-	         433.3940 &      433.5810 &          12 kHz & FM              & SSTV (FM/AFSK) 433.400                        \\
-	                  &               &                 &                 & FM simplex U272--286 \textbf{anrop 433.500}   \\ \hline
-	         433.6000 &      434.0000 &          20 kHz & All mode        & RTTY (FM/AFSK) 433.600                        \\
-	                  &               &                 &                 & FAX 433.700, APRS 433.800                     \\ \hline
-	         434.0000 &      434.4940 &          20 kHz & All mode        & NRAU Dig. kanaler 433.450, 434.475            \\ \hline
-	    $^1$ 434.5000 & $^1$ 434.5940 &          20 kHz & All mode        & NRAU Dig. rep. ut 434.500--575, 2 MHz skift   \\ \hline
-	         434.5940 &      434.9810 &          12 kHz & FM              & NRAU Rep. ut 434.600--975 RU 368--RU398       \\
-	                  &               &                 &                 & 12,5 kHz med 2 MHz skift                      \\ \hline
-	          435.000 &       438.000 &          20 kHz & All mode        & Exklusivt satellit                            \\ \hline
+	\textbf{Frekvens} &               & \textbf{BW} & \textbf{Trafik} & \textbf{Anmärkning}                               \\ \hline
+	         432.0000 &      432.0250 &      500 Hz & CW              & EME exklusivt.                                    \\ \hline
+	         432.0250 &      432.1000 &      500 Hz & CW, PSK31       & CW mellan 432.000--085, \textbf{CW anrop 432.050} \\
+	                  &               &             &                 & PSK31 432.088                                     \\ \hline
+	         432.1000 &      432.3990 &     2.7 kHz & CW, SSB, MGM    & \textbf{SSB anrop 432.200}                        \\
+	                  &               &             &                 & Mikrovåg talkback 432.350, FSK441 432.370         \\ \hline
+	         432.4000 &      432.4900 &      500 Hz & Fyr             & Exklusivt segment för fyrar                       \\ \hline
+	         432.5000 &      432.5940 &      12 kHz & All mode        & Linjära transpondrar IN 432.500--600              \\ \hline
+	         432.5000 &      432.5750 &      12 kHz & All mode        & NRAU Digital rep. in 432.500--575 2 MHz skift     \\ \hline
+	         432.5940 &      432.9940 &      12 kHz & All mode        & Linjära transpondrar ut 432.600--800              \\ \hline
+	         432.5940 &      432.9940 &      12 kHz & FM              & Rep. in 432.600--975 RU368--398 2 MHz skift       \\ \hline
+	         432.9940 &      433.3810 &      12 kHz & FM              & Rep. in 433.000--375 RU368--398 1.6 MHz skift     \\ \hline
+	         433.3940 &      433.5810 &      12 kHz & FM              & SSTV (FM/AFSK) 433.400                            \\
+	                  &               &             &                 & FM simplex U272--286 \textbf{anrop 433.500}       \\ \hline
+	         433.6000 &      434.0000 &      20 kHz & All mode        & RTTY (FM/AFSK) 433.600                            \\
+	                  &               &             &                 & FAX 433.700, APRS 433.800                         \\ \hline
+	         434.0000 &      434.4940 &      20 kHz & All mode        & NRAU Dig. kanaler 433.450, 434.475                \\ \hline
+	    $^1$ 434.5000 & $^1$ 434.5940 &      20 kHz & All mode        & NRAU Dig. rep. ut 434.500--575, 2 MHz skift       \\ \hline
+	         434.5940 &      434.9810 &      12 kHz & FM              & NRAU Rep. ut 434.600--975 RU 368--RU398           \\
+	                  &               &             &                 & 12,5 kHz med 2 MHz skift                          \\ \hline
+	          435.000 &       438.000 &      20 kHz & All mode        & Exklusivt satellit                                \\ \hline
 \end{tabular}
 	\begin{itemize}
 		\item[$^1$] SSA har ett fel i sin bandplan här där det står 433.500--433.5940 i stället.
