--- a/rhb.tex
+++ b/rhb.tex
@@ -1,8 +1,8 @@
-\documentclass[10pt,swedish,a4paper]{article}
+\documentclass[10pt,swedish,a4paper,twoside]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[swedish]{babel}
 \usepackage{longtable}
-\usepackage[a5paper,textwidth=12cm,textheight=17cm]{geometry}
+\usepackage[a5paper,textwidth=12cm,textheight=17cm,bindingoffset=1.5cm]{geometry}
 \usepackage{amsmath}
 \usepackage{pdflscape}
 \usepackage{longtable}
