--- a/rhb.tex
+++ b/rhb.tex
@@ -65,25 +65,25 @@ Som suffix används följande:
 	/R  & Repeaterstation
 \end{tabular}
 
-%\subsection{Utländska signaler}
-%
-%Det är svårare att veta exakt hur utländska signaler är uppbyggda. Eftersom denna handledning är för VHF/UHF tar vi inte med alla DXCC-signaler utan de som är närmast oss i Sverige. Konsultera den fulla listan från ITU eller SSA för mer information.
-%
-%\begin{tabular}{cl|cl|cl}
-%	\textbf{Signal} & \textbf{Land} & \textbf{Signal} & \textbf{Land} & \textbf{Signal} & \textbf{Land} \\ \hline
-%	   AMA--AOZ     & Spanien       &    C3A--C3Z     & Andorra       &    C4A--C4Z     & Cypern        \\
-%	   DAA--DRZ     & Tyskland      &    EAA--EHZ     & Spanien       &    EIA--EJZ     & Irland        \\
-%	   EKA--EKZ     & Armenien      &    EMA--EOZ     & Ukraina       &    EBA--ERZ     & Moldav.       \\
-%	   ESA--ESZ     & Estland       &    EUA--EWZ     & Vitryssl.     &    EXA--EXZ     & Ryssland      \\
-%	   EYA--EYZ     & Tajikist.     &    EZA--EZZ     & Turkmenist.   &    FAA--FZZ     & Frankrike     \\
-%	   GAA--GZZ     & Storbrit.     &    HAA--HZZ     & Ungern        &    HBA--HBZ     & Schweiz       \\
-%	   HEA--HEZ     & Schweiz       &    HFA--HFZ     & Polen         &    HGA--HGZ     & Ungern        \\
-%	   HVA--HVZ     & Vatikan.      &    HWA--HYZ     & Frankrike     &    H2A--H2Z     & Cypern        \\
-%	   IAA--IZZ     & Italien       &    JWA--JXZ     & Norge         &    J4A--J4Z     & Grekland      \\
-%	   LAA--LNZ     & Norge         &    LXA--LXZ     & Luxemburg     &    LYA--LYZ     & Litauen       \\
-%	   LZA--LZZ     & Bulgarien     &    MAA--MZZ     & Storbrit.     &    OEA--OEZ     & Österrike     \\
-%	   OFA--OJZ     & Finland       &    OKA--OLZ     & Tjeckien      &    OMA--OMZ     & Slovakien.
-%\end{tabular}
+\subsection{Utländska signaler}
+
+Det är svårare att veta exakt hur utländska signaler är uppbyggda. Eftersom denna handledning är för VHF/UHF tar vi inte med alla DXCC-signaler utan de som är närmast oss i Sverige. Konsultera den fulla listan från ITU eller SSA för mer information.
+
+\begin{tabular}{cl|cl|cl}
+	\textbf{Signal} & \textbf{Land} & \textbf{Signal} & \textbf{Land} & \textbf{Signal} & \textbf{Land} \\ \hline
+	   AMA--AOZ     & Spanien       &    C3A--C3Z     & Andorra       &    C4A--C4Z     & Cypern        \\
+	   DAA--DRZ     & Tyskland      &    EAA--EHZ     & Spanien       &    EIA--EJZ     & Irland        \\
+	   EKA--EKZ     & Armenien      &    EMA--EOZ     & Ukraina       &    EBA--ERZ     & Moldav.       \\
+	   ESA--ESZ     & Estland       &    EUA--EWZ     & Vitryssl.     &    EXA--EXZ     & Ryssland      \\
+	   EYA--EYZ     & Tajikist.     &    EZA--EZZ     & Turkmenist.   &    FAA--FZZ     & Frankrike     \\
+	   GAA--GZZ     & Storbrit.     &    HAA--HZZ     & Ungern        &    HBA--HBZ     & Schweiz       \\
+	   HEA--HEZ     & Schweiz       &    HFA--HFZ     & Polen         &    HGA--HGZ     & Ungern        \\
+	   HVA--HVZ     & Vatikan.      &    HWA--HYZ     & Frankrike     &    H2A--H2Z     & Cypern        \\
+	   IAA--IZZ     & Italien       &    JWA--JXZ     & Norge         &    J4A--J4Z     & Grekland      \\
+	   LAA--LNZ     & Norge         &    LXA--LXZ     & Luxemburg     &    LYA--LYZ     & Litauen       \\
+	   LZA--LZZ     & Bulgarien     &    MAA--MZZ     & Storbrit.     &    OEA--OEZ     & Österrike     \\
+	   OFA--OJZ     & Finland       &    OKA--OLZ     & Tjeckien      &    OMA--OMZ     & Slovakien.
+\end{tabular}
 
 \subsection{Distriktsiffror}
 
