--- a/rhb.tex
+++ b/rhb.tex
@@ -69,27 +69,35 @@ Som suffix används följande:
 
 Det är svårare att veta exakt hur utländska signaler är uppbyggda. Eftersom denna handledning är för VHF/UHF tar vi inte med alla DXCC-signaler utan de som är närmast oss i Sverige. Konsultera den fulla listan från ITU eller SSA för mer information.
 
-\begin{tabular}{cl|cl|cl}
-	\textbf{Signal} & \textbf{Land} & \textbf{Signal} & \textbf{Land} & \textbf{Signal} & \textbf{Land} \\ \hline
-	   AMA--AOZ     & Spanien       &    C3A--C3Z     & Andorra       &    C4A--C4Z     & Cypern        \\
-	   DAA--DRZ     & Tyskland      &    EAA--EHZ     & Spanien       &    EIA--EJZ     & Irland        \\
-	   EKA--EKZ     & Armenien      &    EMA--EOZ     & Ukraina       &    EBA--ERZ     & Moldav.       \\
-	   ESA--ESZ     & Estland       &    EUA--EWZ     & Vitryssl.     &    EXA--EXZ     & Ryssland      \\
-	   EYA--EYZ     & Tajikist.     &    EZA--EZZ     & Turkmenist.   &    FAA--FZZ     & Frankrike     \\
-	   GAA--GZZ     & Storbrit.     &    HAA--HZZ     & Ungern        &    HBA--HBZ     & Schweiz       \\
-	   HEA--HEZ     & Schweiz       &    HFA--HFZ     & Polen         &    HGA--HGZ     & Ungern        \\
-	   HVA--HVZ     & Vatikan.      &    HWA--HYZ     & Frankrike     &    H2A--H2Z     & Cypern        \\
-	   IAA--IZZ     & Italien       &    JWA--JXZ     & Norge         &    J4A--J4Z     & Grekland      \\
-	   LAA--LNZ     & Norge         &    LXA--LXZ     & Luxemburg     &    LYA--LYZ     & Litauen       \\
-	   LZA--LZZ     & Bulgarien     &    MAA--MZZ     & Storbrit.     &    OEA--OEZ     & Österrike     \\
-	   OFA--OJZ     & Finland       &    OKA--OLZ     & Tjeckien      &    OMA--OMZ     & Slovakien.
+\begin{center}
+\begin{tabular}{cl|cl}
+	\textbf{Signal} & \textbf{Land}        & \textbf{Signal} & \textbf{Land}         \\ \hline
+	   AMA--AOZ     & Spanien              &    C3A--C3Z     & Andorra               \\
+	   C4A--C4Z     & Cypern               &    DAA--DRZ     & Tyskland              \\
+	   EAA--EHZ     & Spanien              &    EIA--EJZ     & Irland                \\
+	   EKA--EKZ     & Armenien             &    EMA--EOZ     & Ukraina               \\
+	   EBA--ERZ     & Moldav.              &    ESA--ESZ     & Estland               \\
+	   EUA--EWZ     & Vitryssland          &    EXA--EXZ     & Ryssland              \\
+	   EYA--EYZ     & Tajikistan           &    EZA--EZZ     & Turkmenistan          \\
+	   FAA--FZZ     & Frankrike            &    GAA--GZZ     & Storbrittannien       \\
+	   HAA--HZZ     & Ungern               &    HBA--HBZ     & Schweiz               \\
+	   HEA--HEZ     & Schweiz              &    HFA--HFZ     & Polen                 \\
+	   HGA--HGZ     & Ungern               &    HVA--HVZ     & Vatikanen             \\
+	   HWA--HYZ     & Frankrike            &    H2A--H2Z     & Cypern                \\
+	   IAA--IZZ     & Italien              &    JWA--JXZ     & Norge                 \\
+	   J4A--J4Z     & Grekland             &    LAA--LNZ     & Norge                 \\
+	   LXA--LXZ     & Luxemburg            &    LYA--LYZ     & Litauen               \\
+	   LZA--LZZ     & Bulgarien            &    MAA--MZZ     & Storbrittannien       \\
+	   OEA--OEZ     & Österrike            &    OFA--OJZ     & Finland               \\
+	   OKA--OLZ     & Tjeckiska republiken &    OMA--OMZ     & Slovakiska republiken
 \end{tabular}
+\end{center}
 
 \subsection{Distriktsiffror}
 
 Sverige delas in i följande distrikt efter sina län:
 
-%\small
+\begin{center}
 \begin{tabular}{cl}
 	\textbf{Dist.} & \textbf{Län}                                     \\ \hline
 	      0        & Stockholm                                        \\
@@ -102,6 +110,7 @@ Sverige delas in i följande distrikt efter sina län:
 	      7        & Skåne, Blekinge, Kronoberg, Jönköping, Kalmar    \\
 	      8        & Speciella stationer utanför landets gränser
 \end{tabular}
+\end{center}
 
 \section{Terminologi och trafik}
 \subsection{Q-koder}
@@ -170,7 +179,8 @@ Sverige delas in i följande distrikt efter sina län:
 
 \subsection{Bokstaveringsalfabetet (Svenska)}
 
-\begin{longtable}{cl|cl|cl }
+\begin{center}
+\begin{tabular}{cl|cl|cl }
 	A & Adam   & O & Olof    & 1 & Ett \\
 	B & Bertil & P & Petter  & 2 & Tvåa \\
 	C & Cesar  & Q & Qvintus & 3 & Trea \\
@@ -186,10 +196,13 @@ Sverige delas in i följande distrikt efter sina län:
 	M & Martin & Å & Åke     & - & Minus\\
 	N & Niklas & Ä & Ärlig   & + & Plus\\
 	  &        & Ö & Östen   &   & Mellanslag\\
-\end{longtable}
+\end{tabular}
+\end{center}
+
 
 \subsection{Bokstaveringsalfabetet (Internationella)}
-\begin{longtable}{cl|cl|cl}
+\begin{center}
+\begin{tabular}{cl|cl|cl}
 	A & Alfa     &  P   & Papa       & 0 & Zero    \\
 	B & Bravo    &  Q   & Quebec     & 1 & One     \\
 	C & Charlie  &  R   & Romeo      & 2 & Two     \\
@@ -205,7 +218,8 @@ Sverige delas in i följande distrikt efter sina län:
 	M & Mike     & Ä/AE & Alfa-Echo  & - & Minus   \\
 	N & November & Ö/OE & Oscar-Echo & + & Plus    \\
 	O & Oscar    &      &            &   & Space
-\end{longtable}
+\end{tabular}
+\end{center}
 
 \section{Signal och brus}
 
