Added hints for TeXstudio for language and encoding

--- a/rhb.tex
+++ b/rhb.tex
@@ -1,3 +1,5 @@
+% !TeX encoding = UTF-8
+% !TeX spellcheck = sv_SE
 \documentclass[10pt,swedish,a4paper,twoside]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[swedish]{babel}
