Stash for merge

--- a/rhb.tex
+++ b/rhb.tex
@@ -426,3 +426,7 @@ Rekommendationer för repeatrar i olika distrikt och län att använda CTCSS fö
 	\end{itemize}
 \end{landscape}
 \end{document}
+
+\begin{landscape}
+\section{PTS Bandplan för VHF}
+\end{landscape}
